--- a/style/login.css
+++ b/style/login.css
@@ -1,4 +1,5 @@
 h1 {
+  font-size: 60px;
   text-align: center;
 }
 
@@ -6,6 +7,13 @@ div {
   text-align: center;
 }
 
+body {
+  margin: 5% auto;
+  font-size: 24px;
+}
+
 input {
-  width: 200px;
+  font-size: 24px;
+  width: 300px;
+  height: 50px;
 }
