--- a/style/login.css
+++ b/style/login.css
@@ -12,8 +12,24 @@ body {
   font-size: 24px;
 }
 
-input {
+input, button {
+  margin: 10px auto;
   font-size: 24px;
   width: 300px;
   height: 50px;
+  border: 3px solid #ccc;
+  border-radius: 9px;
+}
+
+input {
+    padding-left: 20px;
+}
+
+input:focus {
+  border-color: #868686;
+  outline: 0;
+}
+
+a {
+  color: #868686;
 }
