--- a/style/board.css
+++ b/style/board.css
@@ -1,8 +1,39 @@
+h1 {
+  font-family: 'zing_script';
+}
+
 body {
   margin: 5% 5%;
   font-size: 24px;
 }
 
-table {
+table,pre {
   font-size: 24px;
+  font-family: 'WeiRuanYaHei';
+}
+
+a {
+  color: #868686;
+  text-decoration: none;
+}
+
+div {
+  width: 200px;
+}
+
+button {
+  font-size: 15px;
+  border: 3px solid #ccc;
+  border-radius: 5px;
+  font-family: 'WeiRuanYaHei';
+}
+
+@font-face {
+  font-family: 'zing_script';
+  src: url('../fonts/Zing-Script-Rust-SemiBold-Demo-Base-2.otf');
+}
+
+@font-face {
+  font-family: 'WeiRuanYaHei';
+  src: url('../fonts/WeiRuanYaHei-1.ttf');
 }
