--- a/style/board.css
+++ b/style/board.css
@@ -7,6 +7,10 @@ body {
   font-size: 24px;
 }
 
+table {
+  text-align: center;
+}
+
 table,pre {
   font-size: 24px;
   font-family: 'WeiRuanYaHei';
@@ -22,10 +26,19 @@ div {
 }
 
 button {
-  font-size: 15px;
+  font-size: 24px;
   border: 3px solid #ccc;
   border-radius: 5px;
   font-family: 'WeiRuanYaHei';
+}
+
+button:focus {
+  border-color: #868686;
+  outline: 0;
+}
+
+.button {
+  color: black;
 }
 
 @font-face {
