--- a/style/board.css
+++ b/style/board.css
@@ -5,6 +5,9 @@ h1 {
 body {
   margin: 5% 5%;
   font-size: 24px;
+  background-image: url('../img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 table {
@@ -22,7 +25,11 @@ a {
 }
 
 div {
-  width: 200px;
+  margin: 5% 10%;
+  padding: 5% 5%;
+  background-color: white;
+  width: 1000px;
+  border-radius: 10px;
 }
 
 button {
