--- a/style/login.css
+++ b/style/login.css
@@ -2,15 +2,27 @@ h1 {
   font-size: 80px;
   text-align: center;
   font-family: "zing_script";
+  margin-top: 0;
 }
 
 div {
   text-align: center;
 }
 
+.block {
+  margin: 0 30%;
+  padding: 5% 5%;
+  background-color: white;
+  width: 400px;
+  border-radius: 10px;
+}
+
 body {
   margin: 5% auto;
   font-size: 24px;
+  background-image: url('../img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 input, button {
