--- a/style/send.css
+++ b/style/send.css
@@ -1,24 +1,42 @@
 h1 {
   font-family: 'zing_script';
+  text-align: center;
 }
 
-body{
+body {
+  background-image: url('../img/bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   margin: 5% 5%;
   font-size: 24px;
   font-family: 'WeiRuanYaHei';
+}
+
+div {
+  margin: 5% 25%;
+  padding: 5% 10%;
+  background-color: white;
+  width: 450px;
+  border-radius: 10px;
 }
 
 table {
   font-size: 24px;
 }
 
+pre {
+  margin: 10px auto;
+  font-size: 24px;
+  font-family: 'WeiRuanYaHei';
+}
+
 a {
-  margin: 0 5%;
+  margin: 20% 10%;
   color: #868686;
 }
 
 input,textarea {
-    padding-left: 20px;
+  padding-left: 20px;
 }
 
 input,button,textarea,select,option {
